fix: text invisible on mobile browser, image loading issue

--- a/src/app/(login&signup)/login/page.module.css
+++ b/src/app/(login&signup)/login/page.module.css
@@ -10,6 +10,7 @@
 
 .main h1 {
   font-size: 22px;
+  color: black;
 }
 
 .main h2 {
@@ -35,6 +36,7 @@
 .label {
   font-size: 15px;
   margin-bottom: 0px;
+  color: black;
 }
 
 .input,
