--- a/src/app/ui/intro/header.module.css
+++ b/src/app/ui/intro/header.module.css
@@ -33,6 +33,7 @@
 
 .menu:hover {
   text-decoration: underline;
+  color: black;
 }
 
 .menu:active {
